# BearMemori

./: .env.example  .gitignore  AGENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  docker-compose.yml  list_all_endpoints.py  ruff.toml  test_audit_router.py  test_backup_router.py  test_db_init.py  test_events_router.py  test_group4.py  test_llm_jobs_router.py  test_main_integration.py  test_memories_router.py  test_reminders_router.py  test_search_router.py  test_settings_router.py  test_tasks_router.py
assistant/: Dockerfile  README.md  pyproject.toml
assistant/assistant_svc/: agent.py  briefing.py  config.py  context.py  core_client.py  digest.py  main.py
assistant/assistant_svc/interfaces/: base.py  telegram.py
assistant/assistant_svc/tools/: __init__.py  events.py  memories.py  reminders.py  tasks.py
core/: Dockerfile  README.md  pyproject.toml
core/core/: audit.py  backup.py  main.py  scheduler.py
core/core/routers/: audit.py  backup.py  events.py  llm_jobs.py  memories.py  reminders.py  search.py  settings.py  tasks.py
core/core_svc/: database.py  main.py  scheduler.py  search.py  utils.py
core/core_svc/routers/: admin.py  audit.py  backup.py  events.py  llm_jobs.py  memories.py  reminders.py  search.py  settings.py  tasks.py  users.py
core/migrations/: 001_initial_schema.sql  002_add_tasks_updated_at.sql  003_add_reminder_fields.sql  004_update_events_schema.sql  005_update_user_settings_schema.sql  006_update_llm_jobs_schema.sql  007_create_backup_jobs.sql  008_add_fts_meta_cache.sql
llm_worker/: Dockerfile  README.md  pyproject.toml
llm_worker/llm_worker/: main.py
llm_worker/worker/: config.py  consumer.py  core_api_client.py  health_check.py  llm_client.py  main.py  prompts.py  retry.py  utils.py
llm_worker/worker/handlers/: base.py  email_extract.py  followup.py  image_tag.py  intent.py  task_match.py
shared/: README.md  pyproject.toml
shared/shared/: config.py  enums.py  schemas.py
shared/shared_lib/: config.py  redis_streams.py  schemas.py
telegram/: Dockerfile  README.md  pyproject.toml
telegram/telegram_gw/: main.py
telegram/tg_gateway/: callback_data.py  config.py  consumer.py  core_client.py  filters.py  gateway.py  keyboards.py  main.py  media.py  telegram_gateway.py  tz_utils.py
(+124 files in other folders)
