[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life-organiser-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27",
    "redis[hiredis]>=5.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.7.0",
    "python-telegram-bot[ext]>=20.0,<23.0",
    "life-organiser-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["assistant_svc"]
