[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life-organiser-core"
version = "0.1.0"
description = "Core service for Life Organiser"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.20.0",
    "redis[hiredis]>=5.0",
    "life-organiser-shared",
]

[project.optional-dependencies]

[tool.hatch.build.targets.wheel]
packages = ["core_svc"]
