[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life-organiser-llm-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
    "redis[hiredis]>=5.0.0",
    "pydantic-settings>=2.0.0",
    # shared is installed separately in Docker (see Dockerfile).
    # For local dev: pip install -e ../shared && pip install -e .
]

[tool.hatch.build.targets.wheel]
packages = ["worker"]